--- a/TrainingPlanTemplateTool/TrainingPlanTemplateTool.csproj
+++ b/TrainingPlanTemplateTool/TrainingPlanTemplateTool.csproj
@@ -8,7 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WendlerTrainingPlanner.Api.Client\WendlerTrainingPlanner.Api.Client.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
