--- a/WendlerTrainingPlanner.Application.Contracts/WendlerTrainingPlanner.Application.Contracts.csproj
+++ b/WendlerTrainingPlanner.Application.Contracts/WendlerTrainingPlanner.Application.Contracts.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WendlerTrainingPlanner.Domain\WendlerTrainingPlanner.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
